Test: Add some testcases